@@ -7,6 +7,7 @@ Version vNext
 		-Reevaluated the use of FxCop and added the SuppressMessageAttribute to the code. Originally these 
 		 excludes were added in the FxCop file, but adding the attributes to code is more maintainable and 
 		 discoverable.
+		-4 new methods added for checking string on IsNullOrWhiteSpace.
 
 
 Version 1.1.0.10041 (v1.1) 2010-02-10
